<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".ChoosePlayerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/InviteEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="@font/lato_lightitalic"
                android:hint="@string/username"
                android:inputType="textEmailAddress"

                android:textAppearance="?android:attr/textAppearanceLarge"


                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/inviteBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:background="@drawable/rec_btn"
            android:fontFamily="@font/lato_lightitalic"
            android:onClick="onClickInvite"

            android:text="@string/challenge"

            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">
        <TextView
            android:id="@+id/name"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name"
            android:textSize="14sp"
            android:textStyle="normal|bold"/>

        <TextView
            android:id="@+id/emailAddress"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/email_address"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/user_id"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/user_id"
            android:textSize="14sp"
            android:textStyle="bold"/>

    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/myListView"
        android:layout_width="match_parent"
        android:layout_height="375dp"

        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" />
    <ProgressBar
        android:id="@+id/loading_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateTint="@color/colorPrimary"
        android:indeterminateTintMode="src_atop"
        android:visibility="gone" />
</LinearLayout>